code revision, node authoring protocol simplification, code comments, more workflow examples, admin page visual changes
